# test

./: .gitignore  sonar-project.properties  tox.ini
.github/workflows/: python-tests.yml
python-app/: .coverage  Makefile  README.md  pyproject.toml  sonar-project.properties
python-app/app/: main.py
python-app/tests/: test_main.py
whale-app/: .gitignore  Makefile  pyproject.toml  sonar-project.properties
whale-app/app/lambdas/: Makefile  coverage_integration_tests.xml  coverage_unit_tests.xml  pyproject.toml
whale-app/app/lambdas/src/lambda_package/: whale_converter.py
whale-app/app/lambdas/tests/: setup_tests.py  test_whale_converter.py
whale-app/coverage-reports/: coverage-unit_tests.xml
whale-app/src/: whale_converter.py
whale-app/tests/: test_whale_converter.py
