[tool.poetry]
name = "python-app"
version = "0.1.0"
description = ""
authors = ["a-ingarios-zurich <alfred.ingarios@zurich.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
